<resources>
    <string name="app_name">AmazMod</string>
    <string name="welcome_use_watch">Welcome to Amazfit Watch Mod</string>
    <string name="facestore_install_button_confirm">Install on the watch</string>
    <string name="facestore_install_error_ble">The phone must be connected to the watch, connect the watch and try again</string>
    <string name="facestore_install_error_ftp">The version of the watch is too old, update the watch to the latest version</string>
    <string name="facestore_install_error_network">Please try again after connecting the phone to the network</string>
    <string name="facestore_install_error_title">Unable to install</string>
    <string name="facestore_install_error_watchap">The hotspot connection with the watch does not work. Try again.</string>
    <string name="facestore_install_fail">Installation failed</string>
    <string name="facestore_install_name_unknown">Unknown</string>
    <string name="facestore_install_processing">Installation in progress</string>
    <string name="facestore_install_progress_complete">Completed</string>
    <string name="facestore_install_progress_process">Installation in progress... %1$s</string>
    <string name="facestore_install_size_title">%1$sKB</string>
    <string name="facestore_install_time_title">Time for installation %1$s</string>
    <string name="facestore_title">Watchfaces</string>
    <string name="facestore_install_fail_title">Installation failed</string>
    <string name="not_all_permission_granted_warning">If you do not enable all the required permissions, the app may not work properly</string>
    <string name="webview_choose_upload_file">Please select the uploaded file</string>
    <string name="webview_html_error">Failed to load</string>
    <string name="webview_more_menu_cancel_auth">Deauthorize</string>
    <string name="webview_more_menu_refresh">Refresh</string>
    <string name="webview_more_menu_resize">Resize</string>
    <string name="webview_more_menu_share">Share it</string>
    <string name="webview_permission_cam">Cam permission</string>
    <string name="webview_tips_failed_to_load">Failed to load</string>
    <string name="webview_tips_load_404">Page not found</string>
    <string name="webview_tips_load_retry_tip">Retry</string>
    <string name="webview_tips_loading">Loading...</string>
    <string name="webview_tips_network_unreachable">Network unreachable</string>
    <string name="webview_tips_reload_tip">Click on the screen to retry</string>
    <string name="facebook_group_link">Group Facebook Amazfit Italy</string>
    <string name="buy_me_a_coffe">Buy me a coffe</string>
    <string name="bugs_or_reports">Bugs or reports?</string>
    <string name="bugs_email">edo.tassinari@gmail.com</string>
    <string name="paypalme_link">https://www.paypal.me/edotasx</string>
    <string name="strava_sync">Strava Sync</string>
    <string name="strava_authenticated">Authenticated</string>
    <string name="strava_authentication_failed">Auth failed!</string>
    <string name="strava_updated">Updated</string>
    <string name="strava_not_sync">Not sync</string>
    <string name="strava_sync_data">Sync</string>
    <string name="strava_open">Open Strava</string>
    <string name="strava_authorizing">Authorizing</string>
    <string name="strava_syncing">Syncing</string>
    <string name="strava_last_update">Last update: %1$s</string>
    <string name="content_update_available">A new update is available for download. Go to the Facebook page or the website to download it.</string>
    <string name="changelog_v_100">v1.0.0 - 11/02/2018</string>
    <string name="changelog_end">App modified by edotassi with valuable tips from John BNC</string>
    <string name="changelog_row_1"> - Notification management with last message from Whatsapp</string>
    <string name="changelog_row_2"> - Added UI sync Strava</string>
    <string name="changelog_row_3"> - Compatible with both US and Chinese versions</string>
    <string name="changelog_row_4"> - Added Italian official Facebook group link</string>
    <string name="changelog_row_5"> - Added check permissions on startup</string>
    <string name="changelog_row_6"> - Edit the photos in the Login page</string>
    <string name="changelog_row_7"> - Added notification app updates</string>
    <string name="changelog_row_8"> - Added donation link</string>
    <string name="changelog_row_9"> - Added email</string>
    <string name="changelog_v_200">v2.0.0 - 08/03/2018</string>
    <string name="changelog_row_10"> - Fix crash login on Oreo</string>
    <string name="changelog_row_11"> - Added individual notifications on the watch</string>
    <string name="changelog_row_12"> - Notifications on the watch are deleted (almost all)</string>
    <string name="changelog_row_13"> - Replaced Chinese maps with Google ones</string>
    <string name="changelog_row_14"> - Added mod\'s settings</string>
    <string name="changelog_row_15"> - Added the ability to enable / disable RTL support (requires full reboot of the app)</string>
    <string name="changelog_row_16"> - Disabled OTA service (very experimental)</string>
    <string name="changelog_row_17"> - Updated app based on version 2.2 Chinese</string>
    <string name="changelog_row_18"> - Started translations into Italian</string>
    <string name="changelog_v_210">v2.1.0 - 27/03/2018</string>
    <string name="changelog_row_19"> - Updated base app to Chinese version 2.3</string>
    <string name="changelog_row_20"> - Fix for "StatusFragment" crash</string>
    <string name="changelog_row_21"> - Added more options to Notifications settings</string>
    <string name="changelog_row_22"> - Fixed some translations</string>
    <string name="changelog_row_23"> - Added Telegram channel link for updates</string>
    <string name="changelog_row_24"> - Added link to the project on Github</string>
    <string name="changelog_row_25"> - Restored original icons of the track start / end markers</string>
    <string name="changelog_row_26"> - Fix for the "watch unpair" crash</string>
    <string name="changelog_row_27"> - Renamed app in AmazMod</string>
    <string name="changelog_v_300">v3.0.0 - 06/04/2018</string>
    <string name="changelog_row_28"> - Added battery chart</string>
    <string name="changelog_row_29"> - Fix notifications</string>
    <string name="changelog_v_400">v4.0.0 - 01/05/2018</string>
    <string name="changelog_row_30"> - Added the watchfaces custom store (https://sawfb.fabiobarbon.click/)</string>
    <string name="changelog_row_31"> - Bug fixing</string>
    <string name="changelog_row_32"> - Added translations into Brazilian Portuguese</string>
    <string name="changelog_row_33"> - Added partial translations in Spanish</string>
    <string name="changelog_v_415">v4.1.5 - 08/05/2018</string>
    <string name="changelog_row_34"> - Fixed crash when update is available</string>
    <string name="changelog_row_35"> - Fixed bug in notifications</string>
    <string name="changelog_row_36"> - Added Greek translations</string>
    <string name="changelog_row_37"> - Updated Italian translations</string>
    <string name="changelog_v_416">v4.1.6 - 08/05/2018</string>
    <string name="changelog_row_38"> - Now the google map also works with other types of visualization</string>
    <string name="changelog_row_39"> - Fixed some Italian strings</string>
    <string name="changelog_v_420">v4.2.0 - 15/05/2018</string>
    <string name="changelog_row_40"> - Added another store among those available (johnbnc)</string>
    <string name="changelog_row_41"> - Support Android 8 Adaptive Icon</string>
    <string name="changelog_row_42"> - Updated Italian translations</string>
    <string name="changelog_row_43"> - Initial support for AmazModService</string>
    <string name="changelog_row_44"> - Added Polish translations</string>
    <string name="read_all">Read all</string>
    <string name="read_less">Read less</string>
    <string name="github_project">Github project</string>
    <string name="github_project_link">https://github.com/edotassi/AmazMod</string>
    <string name="telegram_update_channel">Telegram channel for updates</string>
    <string name="telegram_update_channel_link">https://t.me/amazmod</string>
    <string name="pref_enable_ota_service_title">Enable OTA Service</string>
    <string name="pref_enable_ota_service_summary">By default notifications of ROM updates are blocked, if you want to receive them on the watch enable this option</string>
    <string name="mod_settings">Mod\'s settings</string>
    <string name="restart_app_to_apply_settings">Restart the app to apply the changes</string>
    <string name="pref_googleMapsType">Google maps type</string>
    <string name="pref_disable_notifications_mod">Original notifications</string>
    <string name="pref_disable_notifications_mod_summary">Disable changes to the notification service, the app will handle notifications like the original one</string>
    <string name="generic_settings">Generic settings</string>
    <string name="pref_enable_rtl">Enable RTL support</string>
    <string name="pref_enable_rtl_summary">By default the support for RTL languages (from right to left) is disabled</string>
    <string name="pref_kill_app">Kill app</string>
    <string name="pref_kill_app_description">Required to apply some settings</string>
    <string name="pref_disable_crash_reporting">Don\'t send crash reports</string>
    <string name="pref_disable_toast_ota">Hide the OTA toast</string>
    <string name="pref_disable_toast_ota_summary">It also hides the additional update notice present only in the app, if you don\'t want to receive any notification enable this option</string>
    <string name="pref_disable_custom_watchfaces_store">Restore watchfaces store</string>
    <string name="pref_disable_custom_watchfaces_store_summary">The custom watch faces store will be disabled (https://sawfb.fabiobarbon.click/)</string>
    <string name="nightscout">Nightscout</string>
    <string name="pref_amazmodservice_enable_summary">The AmazModService adds some features to the watch</string>
    <string name="pref_amazmodservice_enable">Enable</string>
    <string name="pref_nightscout_url_summary">The URL where to download data in real time</string>
    <string name="pref_nightscout_url">URL</string>
    <string name="pref_nightscout_enable_summary">Enable Nightscout support</string>
    <string name="pref_nightscout_enable">Enable</string>
    <string name="pref_nightscout_sync_interval">Sync interval</string>
    <string name="battery">Battery</string>
    <string name="disable_battery_chart">Disable</string>
    <string name="disable_battery_chart_summary">Hide the chart from the home and disable the background service</string>
    <string name="pref_disable_background_sync">Disable background sync</string>
    <string name="pref_disable_background_sync_summary">Disables the synchronization of the charge level in the background. The percentage of charge will be read only when the app is opened</string>
    <string name="pref_battery_background_sync_interval">Background sync interval</string>
    <string name="pref_battery_background_sync_interval_summary">It indicates how often the app in the background must connect to the watch to read the percentage of charge left</string>
    <string name="pref_battery_sync_with_notifications">Sync interval when a notification arrives</string>
    <string name="pref_battery_sync_with_notifications_summary">The app each time it receives a notification tries to read the percentage of charge in order to take advantage of the connection already opened by the transmission of the notification. This is the minimum interval between one reading and the next</string>
    <string name="pref_battery_chart_time_interval">Chart time interval</string>
    <string name="pref_battery_chart_time_interval_summary">It indicates how many days the battery chart shows</string>
</resources>