<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/mod_settings">

    <SwitchPreference
        android:defaultValue="false"
        android:key="preference.disable.notifications.mod"
        android:summary="@string/pref_disable_notifications_mod_summary"
        android:title="@string/pref_disable_notifications_mod" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="preference.disable.custom.watchfaces.store"
        android:summary="@string/pref_disable_custom_watchfaces_store_summary"
        android:title="@string/pref_disable_custom_watchfaces_store"/>

    <!--
    <PreferenceScreen
        android:key="preference.screen.notification"
        android:title="@string/pref_notifications_title">

        <PreferenceCategory android:title="@string/pref_notifications_title">
        -->

    <!--
    <SwitchPreference
        android:defaultValue="false"
        android:key="preference.reverse.hebrew.notifications"
        android:title="@string/pref_reverse_hebrew_notifications" />
        -->
    <!--
    </PreferenceCategory>

    <SwitchPreference
        android:defaultValue="false"
        android:key="preference.enable.double.notification.filter"
        android:title="@string/pref_enable_double_notification_filter" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="preference.enable.app.custom.notification.filter"
        android:title="@string/pref_enable_app_custom_notification_filter" />
</PreferenceScreen>
-->
    <PreferenceCategory android:title="OTA">
        <SwitchPreference
            android:defaultValue="false"
            android:disableDependentsState="true"
            android:key="preference.enable.ota"
            android:summary="@string/pref_enable_ota_service_summary"
            android:title="@string/pref_enable_ota_service_title" />
        <SwitchPreference
            android:defaultValue="false"
            android:dependency="preference.enable.ota"
            android:key="preference.hide.ota.toast"
            android:summary="@string/pref_disable_toast_ota_summary"
            android:title="@string/pref_disable_toast_ota" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Google">
        <ListPreference
            android:defaultValue="roadmap"
            android:dialogTitle="@string/pref_googleMapsType"
            android:entries="@array/pref_googleMapsType_entries"
            android:entryValues="@array/pref_googleMapsType_values"
            android:key="preference.maps.type"
            android:title="@string/pref_googleMapsType" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/generic_settings">
        <SwitchPreference
            android:defaultValue="false"
            android:key="preference.enable.rtl"
            android:summary="@string/pref_enable_rtl_summary"
            android:title="@string/pref_enable_rtl" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="preference.disable.crash.reporting"
            android:title="@string/pref_disable_crash_reporting" />
    </PreferenceCategory>

    <Preference
        android:key="preference.kill.app"
        android:text="@string/pref_kill_app_description"
        android:title="@string/pref_kill_app" />

    <PreferenceScreen
        android:key="preference.screen.battery"
        android:title="@string/battery">
        <SwitchPreference
            android:defaultValue="false"
            android:disableDependentsState="true"
            android:key="preference.disable.battery.chart"
            android:summary="@string/disable_battery_chart_summary"
            android:title="@string/disable_battery_chart" />
        <SwitchPreference
            android:defaultValue="false"
            android:dependency="preference.disable.battery.chart"
            android:key="preference.disable.background.sync"
            android:summary="@string/pref_disable_background_sync_summary"
            android:title="@string/pref_disable_background_sync" />
        <ListPreference
            android:defaultValue="60"
            android:dependency="preference.disable.battery.chart"
            android:dialogTitle="@string/pref_battery_background_sync_interval"
            android:entries="@array/pref_battery_background_sync_interval_entries"
            android:entryValues="@array/pref_battery_background_sync_interval_values"
            android:key="preference.battery.background.sync.interval"
            android:summary="@string/pref_battery_background_sync_interval_summary"
            android:title="@string/pref_battery_background_sync_interval" />
        <ListPreference
            android:defaultValue="5"
            android:dependency="preference.disable.battery.chart"
            android:dialogTitle="@string/pref_battery_sync_with_notifications"
            android:entries="@array/pref_battery_sync_with_notification_entries"
            android:entryValues="@array/pref_battery_sync_with_notification_values"
            android:key="preference.maps.type"
            android:summary="@string/pref_battery_sync_with_notifications_summary"
            android:title="@string/pref_battery_sync_with_notifications" />
        <ListPreference
            android:defaultValue="5"
            android:dependency="preference.disable.battery.chart"
            android:dialogTitle="@string/pref_battery_chart_time_interval"
            android:entries="@array/pref_battery_chart_range_entries"
            android:entryValues="@array/pref_battery_chart_range_values"
            android:key="preference.battery.chart.range"
            android:summary="@string/pref_battery_chart_time_interval_summary"
            android:title="@string/pref_battery_chart_time_interval" />
    </PreferenceScreen>

    <PreferenceScreen
        android:key="preference.screen.amazmodservice"
        android:title="AmazModService">
        <SwitchPreference
            android:defaultValue="false"
            android:key="preference.amazmodservice.enable"
            android:summary="@string/pref_amazmodservice_enable_summary"
            android:title="@string/pref_amazmodservice_enable" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="preference.enable.custom.notifications"
            android:summary="todo"
            android:title="Enable custom notification - todo" />

        <PreferenceScreen
            android:key="preference.screen.nightscout"
            android:title="@string/nightscout"
            android:dependency="preference.amazmodservice.enable">
            <SwitchPreference
                android:defaultValue="false"
                android:key="preference.nightscout.enabled"
                android:summary="@string/pref_nightscout_enable_summary"
                android:title="@string/pref_nightscout_enable" />
            <EditTextPreference
                android:key="preference.nightscout.url"
                android:summary="@string/pref_nightscout_url_summary"
                android:title="@string/pref_nightscout_url" />
            <ListPreference
                android:defaultValue="30"
                android:dependency="preference.nightscout.enabled"
                android:dialogTitle="@string/pref_nightscout_sync_interval"
                android:entries="@array/pref_nightscout_sync_interval_entries"
                android:entryValues="@array/pref_nightscout_sync_interval_values"
                android:key="preference.nightscout.interval.sync"
                android:title="@string/pref_nightscout_sync_interval" />
        </PreferenceScreen>
    </PreferenceScreen>
</PreferenceScreen>