<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/l_card_bg"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:layout_marginBottom="10dp"
    android:paddingBottom="20dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="20.0dip"
            android:layout_height="20.0dip"
            android:layout_marginBottom="10.0dip"
            android:layout_marginLeft="12.0dip"
            android:layout_marginTop="10.0dip"
            android:scaleType="fitCenter"
            android:src="@drawable/changelog" />

        <TextView
            android:id="@+id/link_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:text="Changelog"
            android:textColor="#e6000000"
            android:textSize="13.0sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="12.0dip">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:text="@string/changelog_v_100"
            android:textColor="#e6000000"
            android:textSize="13.0sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:text="@string/changelog_row_1"
            android:textColor="#e6000000"
            android:textSize="13.0sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:text="@string/changelog_row_2"
            android:textColor="#e6000000"
            android:textSize="13.0sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:text="@string/changelog_row_3"
            android:textColor="#e6000000"
            android:textSize="13.0sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:text="@string/changelog_row_4"
            android:textColor="#e6000000"
            android:textSize="13.0sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:text="@string/changelog_row_5"
            android:textColor="#e6000000"
            android:textSize="13.0sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:text="@string/changelog_row_6"
            android:textColor="#e6000000"
            android:textSize="13.0sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:text="@string/changelog_row_7"
            android:textColor="#e6000000"
            android:textSize="13.0sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:text="@string/changelog_row_8"
            android:textColor="#e6000000"
            android:textSize="13.0sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:text="@string/changelog_row_9"
            android:textColor="#e6000000"
            android:textSize="13.0sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:layout_marginTop="10.0dip"
            android:text="@string/changelog_end"
            android:textColor="#e6000000"
            android:textSize="13.0sp"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>